==> salvato/BuggyRosSTF411/Src/ADXL345.cpp <==
#include "ADXL345.h"
#include <algorithm> // min() & max()
#include <cmath>     // pow()
#include <unistd.h>
#include <fcntl.h>
#include <array>
#include "main.h"
#define TO_READ (6)

bool
ADXL345::powerOn() {
    //Turning on the ADXL345
    //writeTo(ADXL345_POWER_CTL, 0);
    //writeTo(ADXL345_POWER_CTL, 16); // AUTOSLEEP
    if(!writeTo(ADXL345_POWER_CTL, 8)) // Set the Measure Bit
        return false;
    HAL_Delay(20);
    return true;
}

bool
ADXL345::writeTo(byte address, byte val) {
    std::array<uint8_t, 2> data{address, val};
    HAL_StatusTypeDef result;
    result = HAL_I2C_Master_Transmit(pHi2c,
                                    (uint16_t)dev_address,
                                    (uint8_t*)data.data(),
                                    data.size(),
                                    10);
    if(result != HAL_OK) {
        return false;
    }
    return true;
}

bool
ADXL345::readFrom(byte address, int16_t num, byte _buff[]) {
    HAL_StatusTypeDef result;
    result = HAL_I2C_Master_Transmit(pHi2c,
                                     (uint16_t)dev_address,
                                     (uint8_t*)&address,
                                     1,
                                     10);
    if(result != HAL_OK)
        return false;
    result = HAL_I2C_Master_Receive(pHi2c,
                                    (uint16_t)dev_address,
                                    (uint8_t *)_buff,
                                    num,
                                    10);
    if(result != HAL_OK)
        return false;
    return true;
}
